Fix code size on mobile

--- a/assets/css/site.sass
+++ b/assets/css/site.sass
@@ -19,5 +19,11 @@
       img
         width: inherit
 
-div.highlight
-  font-size: $size-small
+// Make code a bit smaller on mobile.
++mobile
+  pre
+    font-size: $size-small
+
++tablet
+  pre
+    font-size: $size-small
